day4 题型训练更新，我的收藏编辑功能 #4

--- a/wechatAppDemo/app.json
+++ b/wechatAppDemo/app.json
@@ -8,6 +8,10 @@
     "pages/index/index",
     "pages/index/trains/trains",
     "pages/index/exercise/exercise",
+    "pages/index/exercise/single/single",
+    "pages/index/exercise/multiple/multiple",
+    "pages/index/exercise/judge/judge",
+    "pages/index/exercise/fill/fill",
     "pages/index/exam/exam",
     "pages/index/past/past",
     "pages/index/favorites/favorites",
