--- a/wechatAppDemo/app.json
+++ b/wechatAppDemo/app.json
@@ -7,7 +7,13 @@
     "pages/login/resetpassword/index",
     "pages/index/index",
     "pages/index/trains/trains",
+    "pages/index/trains/practice/practice",
+    "pages/index/trains/result/result",
     "pages/index/exercise/exercise",
+    "pages/index/exercise/single/single",
+    "pages/index/exercise/multiple/multiple",
+    "pages/index/exercise/judge/judge",
+    "pages/index/exercise/fill/fill",
     "pages/index/exam/exam",
     "pages/index/past/past",
     "pages/index/favorites/favorites",
@@ -18,6 +24,7 @@
     "pages/index1/artice/artice",
     "pages/index1/detail/detail",
     "pages/index1/list/list",
+    "pages/index1/sousuo/index",
     "pages/index1/sousuo/sousuo",
     "pages/index2/index",
     "pages/index2/choicePractice/choicePractice",
